<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/authorization_background"
    tools:context=".Autorization">
    <FrameLayout
        android:id="@+id/authHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_50"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_logo" />

            <TextView
                android:id="@+id/appTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/title_top_margin"
                android:text="@string/loading_title"
                android:textAllCaps="true"
                android:textColor="@color/app_grey"
                android:textSize="@dimen/loading_title_size"
                android:textStyle="bold" />
        </LinearLayout>


    </FrameLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="@dimen/base_margin"
        android:background="@drawable/red_button"
        android:imeOptions="actionDone"
        android:minHeight="@dimen/min_height_button"
        android:singleLine="true"
        android:text="@string/submit_update"
        android:textColor="@color/white"
        app:backgroundTint="@color/app_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/phoneTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/base_margin"
        android:text="@string/your_phone"
        android:textColor="@color/light_grey"
        android:textSize="@dimen/textSize16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authHeader" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/policy"
        android:checked="true"
        android:theme="@style/CheckBoxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginTop="@dimen/base_margin"
        android:layout_marginEnd="@dimen/base_margin"
        android:text="@string/policy_text"
        android:textColor="@color/light_grey"
        android:textSize="@dimen/little_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitPhone" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/personalData"
        android:checked="true"
        android:theme="@style/CheckBoxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_margin"
        android:layout_marginTop="@dimen/little_margin"
        android:layout_marginEnd="@dimen/base_margin"
        android:text="@string/personal_text"
        android:textColor="@color/light_grey"
        android:textSize="@dimen/little_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/policy" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/shadow_grey_block"
        android:ems="10"
        android:hint="Пароль"
        android:inputType="textMultiLine"
        android:paddingLeft="10dip"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <EditText
        android:id="@+id/login"
        style="@style/Not_Main_Grey"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="Логин"
        android:inputType="textMultiLine"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneTitle" />


</androidx.constraintlayout.widget.ConstraintLayout>